# p2p-chat-iroh

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
simulation/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
simulation/fixtures/: index.ts
simulation/helpers/: sim-page.ts
simulation/tests/: multi-peer.spec.ts
src/: chat.rs  connect.rs  lib.rs  listen.rs  logging.rs  protocol.rs  registry.rs  telemetry.rs  tracing_tasks.rs  ws_bridge.rs
web/: package-lock.json  package.json
web/src/components/: ChatRoom.tsx  ConnectForm.tsx  ConnectingOverlay.tsx  Landing.tsx  MessageInput.tsx  MessageList.tsx  NetworkTrace.tsx  PeerModal.tsx  RoomDirectory.tsx  SimulationDrawer.tsx  SimulationLayout.tsx  SimulationPeer.tsx  TicketBanner.tsx
web/src/lib/: peerIdentity.ts  simulationScenarios.ts  useChatSocket.ts  useRoomDirectory.ts  useSimulation.ts
web/src/pages/: index.astro  room.astro  simulation.astro
web/src/styles/: globals.css
