[package]
name = "relay-test"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = "0.98"
iroh-tickets = "0.5"
iroh-relay = "0.98"
iroh-gossip = { version = "0.98", features = ["net"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.8"
bytes = "1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
postcard = { version = "1", features = ["alloc"] }
data-encoding = "2"
rand = "0.8"

[[bin]]
name = "listen"
path = "src/listen.rs"

[[bin]]
name = "connect"
path = "src/connect.rs"

[[bin]]
name = "chat"
path = "src/bin/chat.rs"
